examples/type_system/failing/186_runtime_boundary_return_e1004.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 2 errors • examples/type_system/failing/186_runtime_boundary_return_e1004.flx
// error[E421]: Unknown Member in Exposing
//
// `print` is not defined in module `Flow.Primops`.
//
//   examples/type_system/failing/186_runtime_boundary_return_e1004.flx:7:1
//   |
// 7 | // `print` is not defined in module `Flow.Primops`.
//   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
//
// Hint:
//   Check the public members of `Flow.Primops` or remove `print` from the exposing list.
//
//
// error[E012]: Unknown Module Member
//
// Module `TypeSystem.BoundaryUnknown` has no member named `dynamic_string`.
//
//   examples/type_system/failing/186_runtime_boundary_return_e1004.flx:55:5
//    |
// 55 |     TypeSystem.BoundaryUnknown.dynamic_string()
//    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
//
// Hint:
//   Check the module's public members or import the correct module.
//
//
// • 1 error • examples/type_system/failing/186_runtime_boundary_return_e1004.flx
// error[E018]: Import Not Found
//
// Cannot find module `TypeSystem.BoundaryUnknown` to import.
//
//   examples/type_system/failing/186_runtime_boundary_return_e1004.flx:52:1
//    |
// 52 | import TypeSystem.BoundaryUnknown
//    | ^
//
// Hint:
//   Check that: 1) The module file exists (e.g., `TypeSystem.BoundaryUnknown.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
//   Looked for module `TypeSystem.BoundaryUnknown` under roots: examples/type_system/failing, src, lib (imported from examples/type_system/failing/186_runtime_boundary_return_e1004.flx).
//
// Found 3 errors across 2 modules.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E012
// expect-error: E018
// expect-error: E421

import TypeSystem.BoundaryUnknown

fn bad() -> Int {
    TypeSystem.BoundaryUnknown.dynamic_string()
}

bad()
